--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>org.mybatis.spring.boot</groupId>-->
 <!--			<artifactId>mybatis-spring-boot-starter</artifactId>-->
